# qrules

./: .cspell.json  .flake8  .gitignore  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .readthedocs.yml  .taplo.toml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  HANDOFF.md  README.md  codecov.yml  cspell.json  environment.yml  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg  tox.ini  verify_ls_free.py
.binder/: postBuild
.constraints/: py3.10.txt  py3.11.txt  py3.12.txt  py3.6.txt  py3.7.txt  py3.8.txt  py3.9.txt  upgrade.sh
.github/: release-drafter.yml
.github/workflows/: cd.yml  ci-docs.yml  ci-style.yml  ci-tests.yml  ci.yml  linkcheck.yml  milestone.yml  pr-linting.yml  requirements-cron.yml  requirements-pr.yml  requirements.yml
docs/: _extend_docstrings.py  _relink_references.py  abbreviate_signature.py  adr.md  bibliography.bib  conf.py  index.md  install.md  usage.ipynb
docs/adr/: template.md
docs/adr/001/: operators.ipynb
docs/usage/: combine.ipynb  conservation.ipynb  custom-topology.ipynb  ls-coupling.ipynb  particle.ipynb  production.ipynb  qn-transitions.ipynb  reaction.ipynb  spin-projections.ipynb  visualize.ipynb
reqs/: requirements-test.in
reqs/3.6/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
reqs/3.7/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
reqs/3.8/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
reqs/3.9/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
src/qrules/: __init__.py  _attrs.py  _implementers.py  _system_control.py  argument_handling.py  combinatorics.py  conservation_rules.py  default_settings.py  particle.py  quantum_numbers.py  settings.py  solving.py  system_control.py  topology.py  transition.py  workflow.py
src/qrules/io/: ._dot.py.swp  __init__.py  _dict.py  _dot.py
src/qrules/settings/: __init__.py  defaults.py
tests/: conftest.py
tests/channels/: test_d0_to_ks_kp_km.py  test_gammap_to_p_pi0.py  test_jpsi_to_gamma_pi0_pi0.py  test_lc_to_p_km_pip.py  test_nbody_reactions.py  test_psi2s_to_eta_k_kstar.py  test_y_to_d0_d0bar_pi0_pi0.py
tests/unit/: conftest.py  test_combinatorics.py  test_default_settings.py  test_final_state_permutations.py  test_parity_prefactor.py  test_particle.py  test_pdg.py  test_qrules.py  test_quantum_numbers.py  test_reaction.py  test_settings.py  test_solving.py  test_system_control.py  test_topology.py  test_transition.py  test_workflow.py
tests/unit/conservation_rules/: test_additive_qn.py  test_c_parity.py  test_clebsch_gordan.py  test_duck_typing.py  test_g_parity.py  test_gellmann_nishijima.py  test_helicity_conservation.py  test_identical_particle_symmetrization.py  test_mass.py  test_parity_conservation.py  test_spin.py
tests/unit/io/: conftest.py  test_dict.py  test_dot.py  test_io.py
