[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML",
    "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    "frozendict",
    "jsonschema",
    "particle",
    "python-constraint",
    "tqdm >=4.24.0", # autonotebook
]
description = "Rule-based particle reaction problem solver on a quantum number level"
dynamic = ["version"]
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "particles",
    "physics",
]
license = {file = "LICENSE"}
maintainers = [{email = "compwa-admin@ep1.rub.de"}]
name = "qrules"
requires-python = ">=3.9"

[project.optional-dependencies]
viz = ["graphviz"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Changelog = "https://github.com/ComPWA/qrules/releases"
Documentation = "https://qrules.rtfd.io"
Source = "https://github.com/ComPWA/qrules"
Tracker = "https://github.com/ComPWA/qrules/issues"

[dependency-groups]
dev = [
    "ruff",
    "sphinx-autobuild",
    {include-group = "doc"},
    {include-group = "jupyter"},
    {include-group = "style"},
    {include-group = "test"},
]
doc = [
    "myst-nb",
    "sphinx",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-codeautolink[ipython]",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-hep-pdgref",
    "sphinx-pybtex-etal-style",
    "sphinx-thebe",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex >=2",
    {include-group = "notebooks"},
]
jupyter = [
    "ipywidgets",
    "jupyterlab",
    "jupyterlab-code-formatter",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "python-lsp-ruff",
    "python-lsp-server[rope]",
    {include-group = "notebooks"},
]
notebooks = ["qrules[viz]"]
style = [
    "mypy",
    {include-group = "types"},
]
test = [
    "ipython",
    "nbmake",
    "pydot <2",
    "pytest",
    "pytest-cov",
    "pytest-profiling",
    "pytest-xdist",
]
types = [
    "ipython",
    "pydot <2",
    "pytest",
    "sphinx-api-relink",
    "types-PyYAML",
    "types-setuptools",
]

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.package-data]
qrules = [
    "additional_definitions.yml",
    "particle-validation.json",
    "py.typed",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "only-version"
write_to = "src/qrules/version.py"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = "_build"
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
module = ["tests.*"]

[[tool.mypy.overrides]]
ignore_errors = true
module = ["typings.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["IPython.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["constraint.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["jsonschema.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["particle.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pybtex.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pydot.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["sphinx.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["tqdm.*"]

[tool.pyright]
exclude = [
    "**/.git",
    "**/.ipynb_checkpoints",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.tox",
    "**/.venv/",
    "**/__pycache__",
    "**/_build",
]
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportIndexIssue = false
reportInvalidTypeArguments = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportOperatorIssue = false
reportOverlappingOverload = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportReturnType = false
reportUnboundVariable = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedImport = true
reportUnusedVariable = true
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--ignore=docs/abbreviate_signature.py",
    "--ignore=docs/conf.py",
]
filterwarnings = [
    "error",
    "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
    "ignore:'importlib.abc.Traversable' is deprecated and slated for removal in Python 3.14:DeprecationWarning",
    "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning",
    "ignore:unclosed .*:ResourceWarning",
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
norecursedirs = [
    ".ipynb_checkpoints",
    ".virtual_documents",
    "_build",
]
testpaths = [
    "docs",
    "src",
    "tests",
]

[tool.ruff]
extend-exclude = ["typings"]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT00",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLR0913",
    "PLR2004",
    "PLR5501",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",
    "B018",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "N806",
    "N816",
    "PLR09",
    "PLW0602",
    "PLW0603",
    "S101",
    "T20",
    "TC00",
]
"docs/*" = [
    "E402",
    "INP001",
    "S101",
    "S113",
    "T201",
]
"docs/_extend_docstrings.py" = [
    "A002",
    "PLC0415",
]
"docs/conf.py" = [
    "A001",
    "D100",
    "FLY002",
]
"setup.py" = ["D100"]
"src/qrules/conservation_rules.py" = ["FA100"]
"tests/*" = [
    "ANN",
    "D",
    "INP001",
    "PGH001",
    "PLC2701",
    "PLR6301",
    "S101",
    "S307",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["_repr_pretty_"]

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    docnb-force,
    linkcheck,
    sty,
    test,
skip_install = True
skip_missing_interpreters = True
skipsdist = True

[testenv]
allowlist_externals =
    pytest
commands =
    pytest {posargs:src tests/unit}
description = Run all fast unit tests and doctests
passenv = *

[testenv:cov]
allowlist_externals =
    pytest
commands =
    pytest {posargs:src tests/unit} \
        --cov-fail-under=85 \
        --cov-report=html \
        --cov-report=xml \
        --cov=qrules
description = Compute the test coverage of all unit tests

[testenv:doc]
allowlist_externals =
    sphinx-build
commands =
    sphinx-build \
        --builder=html \
        --fail-on-warning \
        --keep-going \
        --show-traceback \
        docs/ docs/_build/html
description = Build documentation and API through Sphinx
setenv =
    PYTHONWARNINGS =

[testenv:doclive]
allowlist_externals =
    sphinx-autobuild
commands =
    sphinx-autobuild \
        --builder=html \
        --ignore=docs/_build/ \
        --ignore=docs/_images/ \
        --ignore=docs/_static/logo.* \
        --ignore=docs/api/ \
        --open-browser \
        --port=0 \
        --re-ignore='.*/__pycache__/.*' \
        --re-ignore='.*/.ipynb_checkpoints/.*' \
        --re-ignore='.*/.virtual_documents/.*' \
        --re-ignore='.*\\.csv' \
        --re-ignore='.*\\.gv' \
        --re-ignore='.*\\.inv' \
        --re-ignore='.*\\.json' \
        --re-ignore='.*\\.pickle' \
        --re-ignore='.*\\.tmp' \
        --re-ignore='.*\\.ya?ml' \
        --watch=docs \
        --watch=src \
        docs/ docs/_build/html
description = Set up a server to directly preview changes to the HTML pages

[testenv:docnb]
base = doc
setenv =
    EXECUTE_NB = yes

[testenv:docnblive]
base = doclive
setenv =
    EXECUTE_NB = yes

[testenv:docnb-force]
base = doc
description = Execute Jupyter notebooks without cache and build documentation with Sphinx
setenv =
    FORCE_EXECUTE_NB = yes

[testenv:linkcheck]
allowlist_externals =
    sphinx-build
base = doc
commands =
    sphinx-build \
        --builder=linkcheck \
        --show-traceback \
        docs/ docs/_build/linkcheck
description = Check external links in the documentation (requires internet connection)

[testenv:nb]
allowlist_externals =
    pytest
commands =
    pytest --nbmake {posargs:docs}
description = Run all notebooks with pytest

[testenv:sty]
allowlist_externals =
    pre-commit
commands =
    pre-commit run --all-files {posargs}
description = Perform all linting, formatting, and spelling checks

[testenv:test]
allowlist_externals =
    pytest
commands =
    pytest {posargs} \
        --cov-fail-under=85 \
        --cov-report=html \
        --cov-report=xml \
        --cov=qrules
description = Run ALL tests, including the slow channel tests, and compute coverage
"""

[tool.uv]
constraint-dependencies = [
    "pytest-profiling!=1.8.0",
]
