[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML",
    "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    "frozendict",
    "jsonschema",
    "particle",
    "python-constraint",
    "tqdm >=4.24.0", # autonotebook
]
description = "Rule-based particle reaction problem solver on a quantum number level"
dynamic = ["version"]
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "particles",
    "physics",
]
license = {file = "LICENSE"}
maintainers = [{email = "compwa-admin@ep1.rub.de"}]
name = "qrules"
requires-python = ">=3.10"

[project.optional-dependencies]
viz = ["graphviz"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Changelog = "https://github.com/ComPWA/qrules/releases"
Documentation = "https://qrules.rtfd.io"
Source = "https://github.com/ComPWA/qrules"
Tracker = "https://github.com/ComPWA/qrules/issues"

[dependency-groups]
dev = [
    "poethepoet",
    "ruff",
    "sphinx-autobuild",
    {include-group = "doc"},
    {include-group = "jupyter"},
    {include-group = "style"},
    {include-group = "test"},
]
doc = [
    "myst-nb",
    "sphinx",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-codeautolink[ipython]",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-hep-pdgref",
    "sphinx-pybtex-etal-style",
    "sphinx-thebe",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex >=2",
    {include-group = "notebooks"},
]
jupyter = [
    "ipywidgets",
    "jupyterlab",
    "jupyterlab-code-formatter",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server[rope]",
    {include-group = "notebooks"},
]
notebooks = ["qrules[viz]"]
style = [
    "mypy",
    {include-group = "types"},
]
test = [
    "ipython",
    "nbmake",
    "pydot <2",
    "pytest",
    "pytest-cov",
    "pytest-profiling",
    "pytest-xdist",
]
types = [
    "ipython",
    "pydot <2",
    "pytest",
    "sphinx-api-relink",
    "types-PyYAML",
    "types-setuptools",
]

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.package-data]
qrules = [
    "additional_definitions.yml",
    "particle-validation.json",
    "py.typed",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
write_to = "src/qrules/version.py"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = "_build"
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
module = ["tests.*"]

[[tool.mypy.overrides]]
ignore_errors = true
module = ["typings.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["IPython.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["constraint.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["jsonschema.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["particle.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pybtex.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pydot.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["sphinx.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["tqdm.*"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "style",
    "linkcheck",
    "docnb-force",
    "cov",
    "test-all",
]

[tool.poe.tasks.cov]
cmd = """
pytest \
    --cov=qrules \
    --cov-fail-under=85 \
    --cov-report=html \
    --cov-report=xml \
    --numprocesses=auto \
    ${paths}
"""
executor = {group = "test"}
help = "Compute how much of the source code is covered by tests"

[[tool.poe.tasks.cov.args]]
default = "src tests/unit"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.doc]
cmd = """
sphinx-build \
    --builder=html \
    --fail-on-warning \
    --keep-going \
    --show-traceback \
    docs/ \
    docs/_build/html/
"""
env = {PYTHONWARNINGS = ""}
help = "Build documentation and API"

[tool.poe.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --open-browser \
    --port=0 \
    --re-ignore=/__pycache__(/.*)?$ \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/_images(/.*)?$ \
    --re-ignore=/\\.cache(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/\\.ipynb_checkpoints(/.*)?$ \
    --re-ignore=/\\.virtual_documents(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --re-ignore=\\.gif$ \
    --re-ignore=\\.gitignore$ \
    --re-ignore=\\.gv$ \
    --re-ignore=\\.inv$ \
    --re-ignore=\\.json$ \
    --re-ignore=\\.pickle$ \
    --re-ignore=\\.pkl$ \
    --re-ignore=\\.png$ \
    --re-ignore=\\.root$ \
    --re-ignore=\\.svg$ \
    --re-ignore=\\.tmp$ \
    --re-ignore=\\.ya?ml$ \
    --watch=src \
    docs/ \
    docs/_build/html/
"""
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.tasks.docnb]
env = {EXECUTE_NB = "yes"}
help = "Build documentation and API with cached notebook execution"
sequence = ["doc"]

[tool.poe.tasks.docnb-force]
env = {FORCE_EXECUTE_NB = "yes"}
help = "Build documentation and API with notebook execution (no cache)"
sequence = ["doc"]

[tool.poe.tasks.docnblive]
env = {EXECUTE_NB = "yes"}
help = "Set up a server to directly preview changes to the HTML pages with cached notebook execution"
sequence = ["doclive"]

[tool.poe.tasks.lab]
args = [{name = "paths", default = "", positional = true}]
cmd = "jupyter lab ${paths}"
help = "Run Jupyter Lab"

[tool.poe.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
env = {PYTHONWARNINGS = ""}
executor = {group = "doc"}
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.tasks.nb]
cmd = "pytest --nbmake --nbmake-timeout=0 docs"
help = "Run all notebooks"

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = {group = "style"}
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.test]
cmd = "pytest --numprocesses=auto ${paths}"
executor = {group = "test"}
help = "Run all unit tests"

[[tool.poe.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-all]
help = "Run all tests on each supported Python version"
sequence = [
    {ref = "test-py 3.9"},
    {ref = "test-py 3.10"},
    {ref = "test-py 3.11"},
    {ref = "test-py 3.12"},
    {ref = "test-py 3.13"},
    {ref = "test-py 3.14"},
]

[tool.poe.tasks.test-py]
cmd = """
uv run \
    --group=test \
    --isolated \
    --no-dev \
    --python=${version} \
    pytest \
        -m 'slow or not slow' \
        --numprocesses=auto
"""
help = "Run all tests on a specific Python version"

[[tool.poe.tasks.test-py.args]]
default = "3.13"
help = "Selected Python version"
name = "version"
positional = true

[tool.pyright]
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportIndexIssue = false
reportInvalidTypeArguments = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportOperatorIssue = false
reportOverlappingOverload = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportReturnType = false
reportUnboundVariable = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedImport = true
reportUnusedVariable = true
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--ignore=docs/abbreviate_signature.py",
    "--ignore=docs/conf.py",
]
filterwarnings = [
    "error",
    "ignore: '[A-Za-z]+' .*deprecated.* use '[a-z_]+':DeprecationWarning",
    "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
    "ignore:'importlib.abc.Traversable' is deprecated and slated for removal in Python 3.14:DeprecationWarning",
    "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning",
    "ignore:unclosed .*:ResourceWarning",
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
norecursedirs = [
    ".ipynb_checkpoints",
    ".virtual_documents",
    "_build",
]
testpaths = [
    "docs",
    "src",
    "tests",
]

[tool.ruff]
extend-exclude = ["typings"]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT00",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLR0913",
    "PLR2004",
    "PLR5501",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",
    "B018",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "N806",
    "N816",
    "PLR09",
    "PLW0602",
    "PLW0603",
    "S101",
    "T20",
    "TC00",
]
"docs/*" = [
    "E402",
    "INP001",
    "S101",
    "S113",
    "T201",
]
"docs/_extend_docstrings.py" = [
    "A002",
    "PLC0415",
]
"docs/conf.py" = [
    "A001",
    "D100",
    "FLY002",
]
"setup.py" = ["D100"]
"src/qrules/conservation_rules.py" = ["FA100"]
"tests/*" = [
    "ANN",
    "D",
    "INP001",
    "PGH001",
    "PLC2701",
    "PLR6301",
    "S101",
    "S307",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["_repr_pretty_"]

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
