[project]
name = "qrules"
description = "Rule-based particle reaction problem solver on a quantum number level"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de" }]
maintainers = [{ email = "compwa-admin@ep1.rub.de" }]
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "particles",
    "physics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML",
    "attrs >=20.1.0",  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    "frozendict",
    "jsonschema",
    "particle",
    "python-constraint",
    "tqdm >=4.24.0",  # autonotebook
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Changelog = "https://github.com/ComPWA/qrules/releases"
Documentation = "https://qrules.rtfd.io"
Issues = "https://github.com/ComPWA/qrules/issues"
Source = "https://github.com/ComPWA/qrules"

[project.optional-dependencies]
viz = ["graphviz"]

[dependency-groups]
dev = [
    "ruff",
    { include-group = "doc" },
    { include-group = "jupyter" },
    { include-group = "style" },
    { include-group = "test" },
]
doc = [
    "myst-nb",
    "sphinx",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-codeautolink[ipython]",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-hep-pdgref",
    "sphinx-pybtex-etal-style",
    "sphinx-thebe",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex >=2",
    { include-group = "notebooks" },
]
jupyter = [
    "ipywidgets",
    "jupyter-ruff",
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server",
    { include-group = "notebooks" },
]
notebooks = ["qrules[viz]"]
style = [
    "ty",
    { include-group = "types" },
]
test = [
    "ipython",
    "pydot",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
types = [
    "graphviz",
    "ipython",
    "pydot",
    "pytest",
    "sphinx-api-relink",
    "types-PyYAML",
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.compwa.policy]
doc-apt-packages = "graphviz"
repo-name = "qrules"
repo-title = "QRules"

[tool.compwa.policy.python]
type-checker = ["ty"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.groups.doc]
heading = "Documentation"

[tool.poe.groups.doc.tasks.doc]
cmd = """
sphinx-build \
    --builder=html \
    --fail-on-warning \
    --keep-going \
    --show-traceback \
    docs/ \
    docs/_build/html/
"""
env = { PYTHONWARNINGS = "" }
executor = { group = "doc" }
help = "Build documentation and API"

[tool.poe.groups.doc.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --open-browser \
    --port=0 \
    --re-ignore=/__pycache__(/.*)?$ \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/_images(/.*)?$ \
    --re-ignore=/\\.cache(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/\\.ipynb_checkpoints(/.*)?$ \
    --re-ignore=/\\.virtual_documents(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --re-ignore=\\.gif$ \
    --re-ignore=\\.gitignore$ \
    --re-ignore=\\.gv$ \
    --re-ignore=\\.inv$ \
    --re-ignore=\\.json$ \
    --re-ignore=\\.pickle$ \
    --re-ignore=\\.pkl$ \
    --re-ignore=\\.png$ \
    --re-ignore=\\.root$ \
    --re-ignore=\\.svg$ \
    --re-ignore=\\.tmp$ \
    --re-ignore=\\.ya?ml$ \
    --watch=src \
    docs/ \
    docs/_build/html/
"""
executor = { group = "doc", with = "sphinx-autobuild" }
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.groups.doc.tasks.docnb]
env = { EXECUTE_NB = "yes" }
help = "Build documentation and API with cached notebook execution"
sequence = ["doc"]

[tool.poe.groups.doc.tasks.docnb-force]
env = { FORCE_EXECUTE_NB = "yes" }
help = "Build documentation and API with notebook execution (no cache)"
sequence = ["doc"]

[tool.poe.groups.doc.tasks.docnblive]
env = { EXECUTE_NB = "yes" }
help = "Set up a server to directly preview changes to the HTML pages with cached notebook execution"
sequence = ["doclive"]

[tool.poe.groups.doc.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --fail-on-warning \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
env = { PYTHONWARNINGS = "" }
executor = { group = "doc" }
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.groups.notebook]
heading = "Notebooks"

[tool.poe.groups.notebook.tasks.lab]
args = [{ name = "paths", default = "", positional = true }]
cmd = "jupyter lab ${paths}"
executor = { group = "jupyter" }
help = "Launch Jupyter Lab"

[tool.poe.groups.notebook.tasks.nb]
args = [{ name = "paths", default = "docs", multiple = true, positional = true }]
cmd = "pytest --nbmake --nbmake-timeout=0 ${paths}"
executor = { group = "notebooks", with = "nbmake" }
help = "Run all notebooks"

[tool.poe.groups.test]
heading = "Testing"

[tool.poe.groups.test.tasks.cov]
cmd = """
pytest \
    --cov=qrules \
    --cov-fail-under=85 \
    --cov-report=html \
    --cov-report=xml \
    --numprocesses=auto \
    -m 'slow or not slow' \
    ${paths}
"""
executor = { group = "test" }
help = "Compute how much of the source code is covered by tests"

[[tool.poe.groups.test.tasks.cov.args]]
default = "src tests/unit"
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test]
cmd = "pytest --numprocesses=auto -m 'slow or not slow' ${paths}"
executor = { group = "test" }
help = "Run all unit tests"

[[tool.poe.groups.test.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test-all]
help = "Run all tests on each supported Python version"
sequence = [
    "test-py310 ${paths}",
    "test-py311 ${paths}",
    "test-py312 ${paths}",
    "test-py313 ${paths}",
    "test-py314 ${paths}",
]

[[tool.poe.groups.test.tasks.test-all.args]]
default = ""
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test-py310]
env = { UV_PYTHON = "3.10" }
ref = "test"

[tool.poe.groups.test.tasks.test-py311]
env = { UV_PYTHON = "3.11" }
ref = "test"

[tool.poe.groups.test.tasks.test-py312]
env = { UV_PYTHON = "3.12" }
ref = "test"

[tool.poe.groups.test.tasks.test-py313]
env = { UV_PYTHON = "3.13" }
ref = "test"

[tool.poe.groups.test.tasks.test-py314]
env = { UV_PYTHON = "3.14" }
ref = "test"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "style",
    "linkcheck",
    "docnb-force",
    "cov",
    "test-all",
]

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = { group = "style" }
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.upgrade]
executor = { type = "simple" }
help = "Upgrade lock files"
parallel = ["_upgrade-precommit", "_upgrade-uv"]

[tool.poe.tasks._upgrade-precommit]
cmd = "pre-commit autoupdate -j8"
executor = { type = "simple" }

[tool.poe.tasks._upgrade-uv]
executor = { type = "simple" }
cmd = "uv lock --upgrade"

[tool.pytest]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--ignore=docs/abbreviate_signature.py",
    "--ignore=docs/conf.py",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore: '[A-Za-z]+' .*deprecated.* use '[a-z_]+':DeprecationWarning",
    "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
    "ignore:'importlib.abc.Traversable' is deprecated and slated for removal in Python 3.14:DeprecationWarning",
    "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning",
    "ignore:unclosed .*:ResourceWarning",
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
minversion = "9.0"
norecursedirs = [
    ".ipynb_checkpoints",
    ".virtual_documents",
    "_build",
]
testpaths = [
    "docs",
    "src",
    "tests",
]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT00",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLR0913",
    "PLR2004",
    "PLR5501",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "RUF067",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["qrules"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",
    "B018",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "N806",
    "N816",
    "PLR09",
    "PLW0602",
    "PLW0603",
    "S101",
    "T20",
    "TC00",
]
"docs/*" = [
    "E402",
    "INP001",
    "S101",
    "S113",
    "T201",
]
"docs/_extend_docstrings.py" = [
    "A002",
    "PLC0415",
]
"docs/conf.py" = [
    "A001",
    "D100",
    "FLY002",
]
"setup.py" = ["D100"]
"src/qrules/conservation_rules.py" = ["FA100"]
"tests/*" = [
    "ANN",
    "D",
    "INP001",
    "PLC2701",
    "PLR6301",
    "RUF069",
    "S101",
    "S307",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["_repr_pretty_"]

[tool.setuptools]
include-package-data = false
package-dir = { "" = "src" }

[tool.setuptools.package-data]
qrules = ["additional_definitions.yml", "particle-validation.json", "py.typed"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
version_file = "src/qrules/version.py"

[tool.tombi.files]
exclude = ["**/uv.lock"]

[tool.tombi.format.rules]
indent-width = 4
line-width = 88

[tool.tombi.lint.rules]
key-empty = "off"

[[tool.tombi.schemas]]
root = "tool.compwa.policy"
path = "https://raw.githubusercontent.com/ComPWA/policy/eeabd21efcee28b47e0f98dbcbb278e918932aee/compwa-policy.schema.json"
include = ["pyproject.toml"]

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
