[metadata]
name = qrules
description = Rule-based particle reaction problem solver on a quantum number level
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/qrules/issues
    Changelog = https://github.com/ComPWA/qrules/releases
    Documentation = https://qrules.rtfd.io
    Source = https://github.com/ComPWA/qrules
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    jsonschema
    particle
    python-constraint
    PyYAML
    tqdm >=4.24.0  # autonotebook
    typing-extensions; python_version <"3.10.0"
packages = find:
package_dir =
    =src

[options.extras_require]
viz =
    graphviz
all =
    %(viz)s
doc =
    %(viz)s
    importlib-metadata; python_version <"3.8.0"
    myst-nb >=0.14; python_version >="3.8.0"  # nb_ configuration prefixes
    myst-nb <0.14; python_version <"3.8.0"
    nbclient >=0.5.5  # https://github.com/executablebooks/jupyter-book/issues/833
    Sphinx >=3
    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/qrules/runs/4833302679
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-comments
    sphinx-copybutton
    sphinx-design
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphinxcontrib-hep-pdgref
    sphobjinv
test =
    ipython
    nbmake <=1.3.0  # https://github.com/ComPWA/qrules/runs/7298068574?check_suite_focus=true#step:3:69
    pydot
    pytest
    pytest-cov
    pytest-profiling
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
mypy =
    mypy >=0.730  # attrs and error code support
    types-docutils
    types-pkg-resources
    types-PyYAML
    types-requests
    types-setuptools
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint >=2.5  # good-names-rgxs
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
jupyter =
    aquirdturtle-collapsible-headings
    jupyterlab
    jupyterlab-code-formatter
    jupyterlab-myst; python_version >="3.7.0"
    jupyterlab-server <2.16; python_version <"3.8.0"  # https://github.com/ComPWA/tensorwaves/actions/runs/3366807875/jobs/5583673530#step:3:74
dev =
    %(all)s
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
    virtualenv <20.16; python_version <"3.8.0"  # https://github.com/ComPWA/qrules/runs/7718388093?check_suite_focus=true#step:3:86

[options.packages.find]
where = src

[options.package_data]
qrules =
    additional_definitions.yml
    particle-validation.json
    py.typed
